platform/onp/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingress
  servers:
  # 기존 HTTP 80 포트
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  # ★ [추가] HTTPS/PASSTHROUGH 또는 HTTP 프로토콜 수신을 위한 443 포트 설정
  - port:
      number: 443
      name: https
      protocol: HTTP # TLS Termination 없이 Internal HTTP로 연결 통과 시
    hosts:
    - "*"
